prepare for multiple resource bundle paths